package org.example.domain.usuario;

public enum Estado {
  EN_VIAJE,
  DETENIDO
}
