package org.example.domain.usuario;

public enum Sexo {
  FEMENINO,
  MASCULINO
}
