package org.example.domain.usuario;

public class Usuario {
  private String nombreDeUsuario;
  private String contrasenia;
}
