package org.example.domain.viaje.reaccionaranteincidente;

import org.example.domain.viaje.Viaje;

public class EnviarMensajeAlerta implements ReaccionarAnteIncidente{
    @Override
    public void reaccionar(Viaje viaje) {
        //TODO
    }
}
