package org.example.domain.viaje.reaccionaranteincidente;

import org.example.domain.viaje.Viaje;

public class LlamarPolicia implements ReaccionarAnteIncidente{
    @Override
    public void reaccionar(Viaje viaje) {
        //TODO
    }
}
