package org.example.domain.viaje.reaccionaranteincidente;

import org.example.domain.viaje.Viaje;

public interface ReaccionarAnteIncidente {
  public void reaccionar(Viaje viaje);
}
